--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,17 @@
 {
+    "settings": {
+        "react": {
+            "version": "detect"
+        }
+    },
     "env": {
         "browser": true,
         "es2021": true
     },
     "extends": [
+        "eslint:recommended",
         "plugin:react/recommended",
-        "standard"
+        "plugin:react/jsx-runtime"
     ],
     "overrides": [
     ],
