--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "prepare": "husky install"
   },
   "lint-staged": {
-    "*.{js,jsx}": "eslint --fix",
+    "*.{js,jsx}": "eslint",
     "*.{js,jsx,ts,tsx,md,html,css}": "prettier --write"
   },
   "eslintConfig": {
